--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "twilio": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
